liikkuminen ja kuvien lataus

--- a/Rogue/Rogue/Rogue.csproj
+++ b/Rogue/Rogue/Rogue.csproj
@@ -16,6 +16,9 @@
     <None Update="Images\Floor.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Images\MAP.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Images\Player.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
