--- a/TurboMapReader/TurboMapReader-main/TurboMapReader.csproj
+++ b/TurboMapReader/TurboMapReader-main/TurboMapReader.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -9,5 +9,9 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Xml.XmlSerializer" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\RayGuiCreator-main\RayGuiCreator-main\RayGuiCreator\RayGuiCreator.csproj" />
   </ItemGroup>
 </Project>
